--- a/css/style.css
+++ b/css/style.css
@@ -11,19 +11,22 @@
   flex-direction: row;
   justify-content: space-between;
   box-sizing: border-box;
- margin-top: 18px;
- margin-bottom: 18px;
+  width: 1168px;
+  margin: 18px auto;
 }
 
 @media screen and (max-width: 1200px) {
   .header {
     width: 100%;
     justify-content: center;
+    margin-top: 18px;
+    margin-bottom: 18px;
   }
 }
+
 @media screen and (max-width: 850px) {
   .header {
-    flex-direction:column;
+    flex-direction: column;
   }
 }
 
@@ -39,7 +42,6 @@
     margin-right: 8px;
   }
 }
-
 
 
 .nav__link {
@@ -83,20 +85,23 @@
   width: 143px;
   height: 44px;
 }
+
 @media screen and (max-width: 1000px) {
   .nav__button1 {
     width: 110px;
-  height: 35px;
+    height: 35px;
   }
 }
+
 .nav__button2 {
   width: 125px;
   height: 44px;
 }
+
 @media screen and (max-width: 1000px) {
   .nav__button2 {
     width: 110px;
-  height: 35px;
+    height: 35px;
   }
 }
 
@@ -110,4 +115,140 @@
 
 .main_img {
   width: 100%;
+
+}
+
+.section {
+  position: relative;
+  width: 100%;
+  margin-bottom: 100px;
+}
+
+.section__subtitle {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #E6B939;
+  position: absolute;
+  top: 218px;
+  left: 136px;
+}
+
+.section__title {
+  width: 416px;
+  height: 116px;
+  position: absolute;
+  top: 237px;
+  left: 136px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 58px;
+  color: #FFFFFF;
+}
+
+.section__text {
+  width: 495px;
+  height: 51px;
+  position: absolute;
+  top: 362px;
+  left: 136px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 25px;
+  color: #CACCD1;
+}
+
+.about {
+  position: relative;
+  max-width: 1168px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  gap: 100px;
+  margin-bottom: 100px;
+}
+
+.about__img {
+  width: 576px;
+  height: 576px;
+
+}
+
+.about__snake {
+  position: absolute;
+  bottom: 448px;
+  left: 451px;
+  background: transparent;
+}
+
+.about_descrption {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.about__subtitle {
+  margin: 0;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #E6B939;
+}
+
+.about__title {
+  margin: 0;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 43px;
+  color: #575445;
+  margin-bottom: 8px;
+}
+
+.about__text {
+  margin: 0;
+  width: 384px;
+  height: 116px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #575445;
+  margin-bottom: 20px;
+}
+
+.about__link {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 21px;
+  color: #575445;
+  text-decoration: none;
+}
+
+.arrow {
+  font-weight: bold
+}
+
+.about__snake2 {
+  position: absolute;
+  background: rgba(87, 84, 69, 0.14);
+  bottom: -128px;
+  left: -125px;
+  background: transparent;
 }
