--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 .wrapper {
   max-width: 1440px;
   margin: 0 auto;
+  padding: 0 30px;
 }
 
 .header {
@@ -20,48 +21,15 @@
   margin: 0 auto;
 }
 
-@media screen and (max-width: 1200px) {
-  .wrap {
-    max-width: 900px;
-  }
-}
-
-@media screen and (max-width: 1200px) {
-  .header {
-    width: 100%;
-    justify-content: center;
-    margin-top: 18px;
-    margin-bottom: 18px;
-  }
-}
-
-@media screen and (max-width: 850px) {
-  .header {
-    flex-direction: column;
-  }
-}
 
 .logo {
   width: 128px;
   height: 39px;
 }
 
-@media screen and (max-width: 1000px) {
-  .logo {
-    width: 100px;
-    height: 30px;
-    margin-right: 8px;
-  }
+.nav{
+  display: flex;
 }
-
-@media screen and (max-width: 500px) {
-  .logo {
-    width: 80px;
-    height: 20px;
-    margin-right: 8px;
-  }
-}
-
 
 .nav__link {
   text-decoration: none;
@@ -80,21 +48,6 @@
   cursor: pointer;
 }
 
-@media screen and (max-width: 1000px) {
-  .nav__link {
-    font-size: 14px;
-    line-height: 14px;
-    margin-right: 15px;
-  }
-}
-
-@media screen and (max-width: 500px) {
-  .nav__link {
-    font-size: 12px;
-    line-height: 12px;
-    margin-right: 7px;
-  }
-}
 
 .nav__button {
   background: #575445;
@@ -112,12 +65,6 @@
   cursor: pointer;
 }
 
-@media screen and (max-width: 1000px) {
-  .nav__button {
-    font-size: 12px;
-    line-height: 14px;
-  }
-}
 
 
 .nav__button1 {
@@ -125,22 +72,6 @@
   height: 44px;
 }
 
-@media screen and (max-width: 1000px) {
-  .nav__button1 {
-    width: 110px;
-    height: 35px;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .nav__button1 {
-    font-size: 10px;
-    line-height: 10px;
-    width: 70px;
-    height: 35px;
-
-  }
-}
 
 .nav__button2 {
   width: 125px;
@@ -148,22 +79,6 @@
   margin: 0;
 }
 
-@media screen and (max-width: 1000px) {
-  .nav__button2 {
-    width: 110px;
-    height: 35px;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .nav__button2 {
-    width: 70px;
-    height: 35px;
-    font-size: 10px;
-    line-height: 10px;
-
-  }
-}
 
 .nav__button-cart {
   margin-right: 8px;
@@ -194,28 +109,11 @@
   text-transform: uppercase;
   color: #E6B939;
   position: absolute;
-  top: calc(210/640*100%);
+  top: calc(180/640*100%);
   left: calc(136/1440*100%);
 
 }
 
-@media screen and (max-width: 600px) {
-  .section__subtitle {
-    line-height: 12px;
-    font-size: 12px;
-    text-transform: none;
-    top: 45px;
-  }
-}
-
-@media screen and (max-width: 420px) {
-  .section__subtitle {
-    line-height: 12px;
-    font-size: 12px;
-    text-transform: none;
-    top: 25px;
-  }
-}
 
 .section__title {
   max-width: 416px;
@@ -233,29 +131,12 @@
   margin-top: 0;
 }
 
-@media screen and (max-width: 600px) {
-  .section__title {
-    line-height: 28px;
-    height: auto;
-    font-size: 1.8em;
-  }
-}
-
-@media screen and (max-width: 420px) {
-  .section__title {
-    line-height: 14px;
-
-    font-size: 1.3em;
-  }
-}
-
 
 
 .section__text {
-  width: 495px;
-  height: 51px;
+  
   position: absolute;
-  top: calc(362/640*100%);
+  top: calc(400/640*100%);
   left: calc(136/1440*100%);
   font-family: 'Poppins';
   font-style: normal;
@@ -266,15 +147,6 @@
   margin: 0;
 }
 
-@media screen and (max-width: 600px) {
-  .section__text {
-    height: 20px;
-    font-size: 12px;
-    line-height: 12px;
-    margin-top: 10px;
-    width: 250px;
-  }
-}
 
 .about {
   position: relative;
@@ -282,23 +154,8 @@
   margin: 0 auto;
   display: flex;
   flex-direction: row;
-  gap: 100px;
-  margin-bottom: 100px;
-}
-
-@media screen and (max-width: 600px) {
-  .about {
-    flex-direction: column;
-    gap: 20px;
-    margin-left: 30px;
-  }
-}
-@media screen and (max-width: 340px) {
-  .about {
-    flex-direction: column;
-    gap: 20px;
-   margin-left: 5px;
-  }
+  justify-content: space-between;
+    margin-bottom: 100px;
 }
 
 .about__img {
@@ -307,18 +164,7 @@
 
 }
 
-@media screen and (max-width: 1100px) {
-  .about__img {
-    width: 350px;
-    height: 350px;
-  }
-}
-@media screen and (max-width: 420px) {
-  .about__img {
-    width: 300px;
-    height: 300px;
-  }
-}
+
 
 .about__snake {
   position: absolute;
@@ -327,12 +173,6 @@
   background: transparent;
 }
 
-@media screen and (max-width: 720px) {
-  .about__snake {
-    width: 0;
-    height: 0;
-  }
-}
 
 
 .about_descrption {
@@ -342,12 +182,6 @@
 
 }
 
-@media screen and (max-width: 855px) {
-  .about_descrption {
-    max-width: 350px;
-    height: 350px;
-  }
-}
 
 .about__subtitle {
   margin: 0;
@@ -361,19 +195,6 @@
   color: #E6B939;
 }
 
-@media screen and (max-width: 855px) {
-  .about__subtitle {
-    font-size: 12px;
-    line-height: 14px;
-  }
-}
-@media screen and (max-width: 420px) {
-  .about__subtitle {
-    font-size: 12px;
-    line-height: 14px;
-    max-width: 300px;
-  }
-}
 
 .about__title {
   margin: 0;
@@ -386,19 +207,6 @@
   margin-bottom: 8px;
 }
 
-@media screen and (max-width: 855px) {
-  .about__title {
-    font-size: 20px;
-    line-height: 22px;
-  }
-}
-@media screen and (max-width: 420px) {
-  .about__title {
-    font-size: 20px;
-    line-height: 22px;
-    max-width: 300px;
-  }
-}
 
 .about__text {
   margin: 0;
@@ -413,20 +221,6 @@
   margin-bottom: 20px;
 }
 
-@media screen and (max-width: 855px) {
-  .about__text {
-    font-size: 12px;
-    line-height: 12px;
-    max-width: 350px;
-  }
-}
-@media screen and (max-width: 420px) {
-  .about__text {
-    font-size: 12px;
-    line-height: 12px;
-    max-width: 300px;
-  }
-}
 
 .about__link {
   font-family: 'Poppins';
@@ -468,12 +262,6 @@
 
 }
 
-@media screen and (max-width: 720px) {
-  .promise__snake1 {
-    width: 0;
-    height: 0;
-  }
-}
 
 .promise__snake2 {
   position: absolute;
@@ -481,12 +269,6 @@
   left: 0;
 }
 
-@media screen and (max-width: 600px) {
-  .promise__snake2 {
-    width: 0;
-    height: 0;
-  }
-}
 
 .promise__subtitle {
   margin: 0 auto;
@@ -502,13 +284,6 @@
   max-width: 119px;
 }
 
-@media screen and (max-width: 420px) {
-  .promise__subtitle {
-    font-size: 12px;
-    line-height: 12px;
-  }
-}
-
 .promise__title {
   font-family: 'Roboto';
   font-style: normal;
@@ -520,13 +295,6 @@
   margin: 0 auto 7px;
 }
 
-@media screen and (max-width: 420px) {
-  .promise__title {
-    font-size: 20px;
-    line-height: 20px;
-
-  }
-}
 
 .promise__text {
   max-width: 538px;
@@ -540,30 +308,12 @@
   margin: 0 auto;
 }
 
-@media screen and (max-width: 420px) {
-  .promise__text {
-    font-size: 10px;
-    line-height: 12px;
-    max-width: 350px;
-  }
-}
 
 .promise__gallery {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
 
-@media screen and (max-width: 900px) {
-  .promise__gallery {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .promise__gallery {
-    grid-template-columns: repeat(1, 1fr);
-  }
-}
 
 .card {
   max-width: 388.66px;
@@ -574,11 +324,6 @@
   justify-content: center;
 }
 
-@media screen and (max-width: 600px) {
-  .card {
-    margin: 0 auto;
-  }
-}
 
 
 .card__image {
@@ -622,57 +367,28 @@
 
 }
 
+.family {
+  text-align: center;
+}
 
 
 .family__subtitle {
   max-width: 148px;
 }
 
-@media screen and (max-width: 420px) {
-  .family__subtitle {
-    font-size: 12px;
-    line-height: 12px;
-  }
-}
-
-@media screen and (max-width: 420px) {
-  .family__title {
-    font-size: 20px;
-    line-height: 20px;
-
-  }
-}
 
 .family__text {
   margin-bottom: 21px;
 }
 
-@media screen and (max-width: 420px) {
-  .family__text {
-    font-size: 10px;
-    line-height: 12px;
-    max-width: 300px;
-  }
-}
 
 .family__galery {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(379px, 1fr));
-  gap: calc()
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
-@media screen and (max-width: 600px) {
-  .family__galery {
-    margin-left: 20px;
-  }
-}
-
-
-@media screen and (max-width: 420px) {
-  .family__galery{
-    margin-left: 0;
-}
-}
 
 
 
@@ -682,18 +398,7 @@
   position: relative;
   margin-bottom: 21px;
 }
-@media screen and (max-width: 420px) {
-  .gallery__card{
-  max-width: 300px;
-  margin-left: 5px;
-}
-}
-@media screen and (max-width: 30px) {
-  .gallery__card{
-  max-width: 300px;
-  margin-left: 5px;
-}
-}
+
 
 .gallery__title {
   font-family: 'Roboto';
@@ -708,13 +413,6 @@
   left: calc(106/379*100%);
 }
 
-@media screen and (max-width: 420px) {
-  .gallery__title {
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 18px;
-  }
-}
 
 .gallery__subtitle {
   font-family: 'Poppins';
@@ -730,40 +428,10 @@
   max-width: 260px;
 }
 
-@media screen and (max-width: 420px) {
-  .gallery__subtitle {
-    padding-top: 70px;
-    font-size: 12px;
-    line-height: 14px;
-    top: 80px;
-    left: 45px;
-    padding: 0;
-
-  }
-}
-
-@media screen and (max-width: 360px) {
-  .gallery__subtitle {
-    padding-top: 70px;
-    font-size: 12px;
-    line-height: 14px;
-    top: 80px;
-    left: 30px;
-    padding: 0;
-
-  }
-}
-
 
 .gallery__img {
   width: 100%;
   border-radius: 10px;
-}
-
-@media screen and (max-width: 400px) {
-  .gallery__img {
-    width: 300px;
-  }
 }
 
 .gallery__link {
@@ -780,13 +448,6 @@
   z-index: 5;
 }
 
-@media screen and (max-width: 400px) {
-  .gallery__link {
-    left: 60px;
-    font-size: 12px;
-    line-height: 16px;
-  }
-}
 
 .gallery__link:hover {
   opacity: 0.5;
@@ -879,16 +540,6 @@
   line-height: 22px;
 }
 
-@media screen and (max-width: 420px) {
-  .shop__btn {
-    width: 70px;
-    height: 35px;
-    margin-left: 35%;
-    font-size: 10px;
-    line-height: 12px;
-  }
-}
-
 .shop__subtitle {
   font-family: 'Poppins';
   font-style: normal;
@@ -903,13 +554,6 @@
   margin: 0 auto;
 }
 
-@media screen and (max-width: 420px) {
-  .shop__subtitle {
-    padding-top: 70px;
-    font-size: 12px;
-    line-height: 14px;
-  }
-}
 
 .shop__title {
   font-family: 'Roboto';
@@ -922,13 +566,6 @@
   margin: 0 auto;
 }
 
-@media screen and (max-width: 420px) {
-  .shop__title {
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 18px;
-  }
-}
 
 .shop__text {
   font-family: 'Poppins';
@@ -940,12 +577,4 @@
   color: #FAFAFC;
   margin-top: 7px auto 21px;
 
-}
-
-@media screen and (max-width: 420px) {
-  .shop__text {
-    font-size: 10px;
-    line-height: 12px;
-    max-width: 350px;
-  }
 }
