--- a/css/media.css
+++ b/css/media.css
@@ -1,120 +1,157 @@
-@media screen and (max-width: 1200px) {
-
+@media screen and (max-width: 1260px) {
   .logo {
-    width: 90px;
+    width: 105px;
+    height: 38px;
+  }
+
+  .header {
+    flex-direction: column;
+    gap: 15px;
+  }
+
+
+  .helper_2 {
+    display: flex;
+    justify-content: space-around;
+    gap: 100px;
+  }
+
+  .logo_1 {
+    display: flex;
+    justify-content: space-between;
+    gap: 500px;
+  }
+
+  .menu_btn {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 40px;
     height: 30px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    z-index: 10;
   }
 
-  .nav__button1 {
-    width: 100px;
-    height: 30px;
-    font-size: x-small;
+  .menu_btn span {
+    height: 3px;
+    width: 100%;
+    background-color: black;
   }
 
-  .nav__button2 {
-    width: 100px;
-    height: 30px;
-    margin: 0;
-    font-size: x-small;
+  .menu_btn.white span {
+
+    background-color: white;
   }
 
-  .nav__link {
 
-    margin-right: 10px;
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-  }
-
-  .section {
-
-    margin-bottom: 50px;
+  .helper_1 {
+    display: none;
   }
 
   .section__subtitle {
-    top: calc(180/640*100%);
-    left: calc(136/1440*100%);
-    margin-top: 0;
-    margin-bottom: 6px;
+    top: calc(114/640*100%);
   }
 
   .section__title {
-
-    height: auto;
+    top: calc(182/640*100%);
     font-size: 2em;
-    line-height: 36px;
+    height: 108px;
 
   }
 
-  .section__text {
-    font-size: 12px;
+  .helper_1.menu-open {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgb(126, 126, 154);
+    height: 100vh;
+    z-index: 5;
+    text-align: center;
+    padding-top: 140px;
+
+
+  }
+
+  .nav__link {
+    color: white;
+    font-size: 30px;
+    padding: 20px 0;
+  }
+
+  .logo {
+    z-index: 20;
+
   }
 
   .about {
-    gap: 20px;
+    position: relative;
+    max-width: 1168px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 50px;
   }
 
   .about__img {
-    max-width: 376px;
-    max-height: 376px;
+    width: 450px;
+    height: 450px;
+    margin-right: 25px;
+  }
+
+  .about_descrption {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
+  }
+
+
+  .about__text {
+    height: auto;
+  }
+
+  .promise__snake1 {
+    display: none;
+  }
+
+  .first__aid-nav {
+    left: 17%;
+
   }
 }
 
 @media screen and (max-width: 800px) {
-  .header {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    box-sizing: border-box;
-    max-width: 1168px;
-    margin: 18px auto;
-    padding-left: 5px;
+  .helper_2 {
+    gap: 20px;
   }
 
-  .nav {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-
-
-  .helper {
-    text-align: center;
-  }
-
-  .section {
-    margin-bottom: 20px;
+  .logo_1 {
+    gap: 300px;
   }
 
   .section__title {
-    font-size: 1.5em;
-
+    line-height: 39px;
+    height: 86px;
   }
 
-  .first__aid-nav {
-    margin-left: 10%;
-    max-width: 415px;
-    height: 48px;
-    gap: 10px;
-  }
+  .section__text {
+    top: calc(432/640*100%);
+    font-size: 15px;
+    line-height: 21px;
 
-  .first__aid-nav-cart {
-    width: 10px;
-    height: 8px;
-  }
-
-  .first__aid-link {
-
-    font-size: 8px;
-    line-height: 8px;
-
-    text-decoration: none;
   }
 
   .about {
     flex-direction: column;
-    gap: 20px;
+    align-items: center;
+    gap: 30px;
     margin-bottom: 50px;
   }
 
@@ -122,238 +159,248 @@
     display: none;
   }
 
-  .about__snake2 {
-    display: none;
-  }
-
   .promise {
-
+    background: #FAFAFC;
+    width: 100%;
+    position: relative;
+    z-index: 3;
     padding-top: 50px;
     padding-bottom: 50px;
     margin-bottom: 50px;
   }
 
-  .promise__subtitle {
-
-    font-size: 12px;
-    line-height: 9px;
-    margin-bottom: 10px;
-
-  }
-
-  .promise__title {
-
-    font-size: 14px;
-    line-height: 13px;
-  }
-
-  .promise__text {
-
-    font-size: 12px;
-    line-height: 11px;
-
-  }
-
-  .card {
-
-    height: 184px;
-  }
-
-  .card__title {
-    font-size: 13px;
-    line-height: 6px;
-
-  }
-
-  .card__text {
-    margin: 0;
-    font-size: 9px;
-    line-height: 15px;
-
-  }
-
-
-  .promise__gallery {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  .promise__snake1 {
-    display: none;
-  }
-
-
   .promise__snake2 {
     display: none;
   }
 
-  .shop {
+  .promise__gallery {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
+  }
 
-    max-height: 285px;
+  .family__galery {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .first__aid-nav {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    background: transparent;
+    align-items: flex-start;
+    left: 1%;
+    bottom: 8%;
+    gap: 5px;
+  }
+
+  .shop {
+    height: 268px;
+  }
+
+  .shop__subtitle {
+
+    font-size: 14px;
+    line-height: 20px;
+    text-align: center;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: #FAFAFC;
+    padding-top: 40px;
+    margin: 0 auto;
   }
 
   .shop__title {
-    font-size: 22px;
-
-  }
-
-
-  .shop__subtitle {
-    padding-top: 60px;
+    font-size: 25px;
+    line-height: 26px;
 
   }
 
   .shop__text {
-    font-size: 9px;
-    line-height: 17px;
+
+    font-size: 10px;
+    line-height: 24px;
+
   }
 
   .shop__btn {
-    margin-left: 44%;
-    width: 75px;
-    height: 27px;
-    font-weight: 400;
-    font-size: 9px;
-    line-height: 10px;
+
+    width: 82px;
+    height: 33px;
+    font-size: 13px;
+    line-height: 22px;
+  }
+
+  .shop__img {
+    display: none;
+  }
+  .all-category {
+    margin-bottom: 50px;
   }
 }
 
-@media screen and (max-width: 500px) {
+
+@media screen and (max-width: 550px) {
   .logo {
-    width: 60px;
-    height: 20px;
+    width: 67px;
+    height: 27px;
   }
 
-  .nav__button1 {
-    width: 65px;
-    height: 24px;
-    font-size: x-small;
+  .logo_1 {
+    gap: 150px;
   }
 
-  .nav__button2 {
-    width: 65px;
-    height: 24px;
-    font-size: x-small;
+  .menu_btn {
+    width: 35px;
+    height: 23px;
+  }
+
+  .nav__button {
+    font-size: 12px;
+    padding: 3px;
   }
 
   .nav__button-cart {
     display: none;
   }
 
+  .nav__button-count {
+    margin-left: 6px;
+  }
+
+  .section {
+    margin-bottom: 35px;
+  }
+
   .section__title {
-    font-size: 12px;
-    line-height: 24px;
+    line-height: 16px;
+    height: 25px;
+    font-size: 16px;
   }
 
   .section__subtitle {
-    top: calc(160/640*100%);
-    left: calc(136/1440*100%);
-    margin-top: 0;
-    margin-bottom: 6px;
-    font-size: 8px;
+    top: calc(33/640*100%);
+    font-size: 9px;
+    line-height: 14px;
   }
 
   .section__text {
-    font-size: 6px;
-    line-height: 10px;
-  }
+    display: none;
 
-
-  .gallery__img {
-    margin: 0 auto;
-    width: 70%;
   }
 
   .about {
-    margin-bottom: 20px;
+    margin-bottom: 25px;
   }
 
   .about__img {
-    max-width: 250px;
-    max-height: 250px;
+    width: 250px;
+    height: 250px;
+    margin-right: 0;
   }
 
   .about__subtitle {
-
     font-size: 10px;
-    line-height: 16px;
-
+    line-height: 9px;
   }
 
   .about__title {
-    font-size: 20px;
-    line-height: 20px;
+    font-size: 24px;
+    line-height: 25px;
   }
 
   .about__text {
+    font-size: 9px;
+    line-height: 15px;
 
-    max-width: 384px;
-    height: 81px;
+  }
+
+  .about__link {
+
     font-size: 11px;
     line-height: 14px;
 
-    margin-bottom: 12px;
+  }
+
+  .about__snake2 {
+    display: none;
   }
 
   .promise {
-
-    padding-top: 29px;
-    padding-bottom: 28px;
-    margin-bottom: 15px;
+    margin-bottom: 0;
   }
 
-  .gallery__title {
-    font-size: 19px;
-    line-height: 1px;
-    text-align: center;
+  .promise__gallery {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .promise__title {
+
+    font-size: 21px;
+    line-height: 33px;
 
   }
 
-  .gallery__subtitle {
+  .promise__text {
     font-size: 12px;
-    line-height: 10px;
-    width: 150px;
-    top: calc(95/473*100%);
-    left: calc(85/379*100%);
-
   }
 
-  .gallery__link {
-
-    font-size: 10px;
-    line-height: 21px;
-    top: calc(173/473*100%);
-    left: calc(108/379*100%);
+  .first__aid-nav-cart {
+    display: none;
   }
 
-  .all-category {
-    font-size: 11px;
-    margin: 0 auto 26px;
+  .first__aid-link {
+    font-size: 8px;
+    line-height: 9px;
   }
-  .shop {
-    max-height: 173px;
-}
 
   .shop__subtitle {
-    padding-top: 20px;
     font-size: 12px;
+    padding-top: 20px;
+    margin-bottom: 10px
   }
+
   .shop__title {
-    font-size: 13px;
-    line-height: 18px;
-}
-.shop__text {
-  font-size: 9px;
-  line-height: 11px;
-  padding-left: 5px;
-  padding-right: 5px;
-}
-.shop__btn {
-  margin-left: 39%;
-  width: 57px;
-  height: 20px;
-  font-size: 9px;
-  line-height: 8px;
+    font-size: 19px;
+    line-height: 19px;
+  }
+
+  .shop__text {
+    font-size: 9px;
+    line-height: 15px;
+  }
+
+  .b {
+    margin-top: 20px;
+  }
+  .family{
+    margin-top: 45px;
+  }
+
+  .family__galery {
+    gap: 20px;
+  }
+
+  .gallery__card {
+    max-width: 379px;
+    border-radius: 10px;
+    position: relative;
+    margin-bottom: 21px;
+    position: relative;
+    height: 367px;
+    padding: 0px 25px;
+  }
+
 }
 
+@media screen and (max-width: 350px) {
+  .gallery__card {
+    height: 335px;
+  }
 }
