--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   box-sizing: border-box;
   max-width: 1168px;
   margin: 18px auto;
@@ -19,6 +20,7 @@
 .wrap {
   max-width: 1168px;
   margin: 0 auto;
+  text-align: center;
 }
 
 
@@ -29,6 +31,7 @@
 
 .nav{
   display: flex;
+  justify-content: space-between;
 }
 
 .nav__link {
@@ -58,6 +61,7 @@
   font-size: 16px;
   line-height: 22px;
   color: #FFFFFF;
+  padding: 5px;
 }
 
 .nav__button:hover {
@@ -65,18 +69,8 @@
   cursor: pointer;
 }
 
-
-
-.nav__button1 {
-  width: 143px;
-  height: 44px;
-}
-
-
-.nav__button2 {
-  width: 125px;
-  height: 44px;
-  margin: 0;
+.menu_btn{
+  display: none;
 }
 
 
@@ -121,8 +115,8 @@
   position: absolute;
   top: calc(237/640*100%);
   left: calc(136/1440*100%);
-  font-family: 'Roboto';
-  font-style: normal;
+  font-family: 'MaisonNeue';
+  font-style: 700;
   font-weight: 400;
   font-size: 3em;
   line-height: 58px;
@@ -136,6 +130,7 @@
 .section__text {
   
   position: absolute;
+  max-width: 495px;
   top: calc(400/640*100%);
   left: calc(136/1440*100%);
   font-family: 'Poppins';
@@ -397,6 +392,9 @@
   border-radius: 10px;
   position: relative;
   margin-bottom: 21px;
+  position: relative;
+  height: 473px;
+  padding: 39px 64px ;
 }
 
 
@@ -408,9 +406,11 @@
   line-height: 34px;
   text-align: center;
   color: #575445;
-  position: absolute;
-  top: calc(39/473*100%);
-  left: calc(106/379*100%);
+  position: relative;
+  z-index: 5;
+  margin-bottom: 9px;
+  
+ 
 }
 
 
@@ -422,16 +422,23 @@
   line-height: 22px;
   text-align: center;
   color: #575445;
-  position: absolute;
-  top: calc(82/473*100%);
-  left: calc(63/379*100%);
+  position: relative;
+  z-index: 5;
   max-width: 260px;
+  margin-bottom: 20px;
 }
 
 
 .gallery__img {
   width: 100%;
   border-radius: 10px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 1;
+  
 }
 
 .gallery__link {
@@ -442,10 +449,9 @@
   line-height: 21px;
   color: #575445;
   text-decoration: none;
-  position: absolute;
-  top: calc(147/473*100%);
-  left: calc(120/379*100%);
+  position: relative;
   z-index: 5;
+ 
 }
 
 
@@ -492,7 +498,7 @@
   justify-content: space-around;
   position: absolute;
   bottom: 40px;
-  right: 40px;
+ left: 49%;
   gap: 20px;
   padding-left: 22px;
   padding-right: 22px;
@@ -530,9 +536,12 @@
   left: 0;
   bottom: 0;
 }
-
+.b{
+  display: flex;
+  justify-content: center;
+}
 .shop__btn {
-  margin-left: 46%;
+  /*margin-left: 46%;*/
   width: 111px;
   height: 44px;
   font-weight: 400;
@@ -578,3 +587,4 @@
   margin-top: 7px auto 21px;
 
 }
+
